test/files/neg/val_infer.check
val_infer.scala:3: error: overriding method foo in trait Base of type => Int;
 value foo has incompatible type
  trait Sub extends Base { val foo = "" }
                               ^
one error found
